--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "TabHandler",
   "version": "1.0",
-  "permissions": ["alarms", "tabs"],
+  "permissions": ["tabs"],
   "content_scripts": [
   {
     "matches": [
